# Youtube-Listener

./: .env.example  .gitignore  Makefile  README.md  manage.py  pyproject.toml
api/: constants.py  models.py  serializers.py  tasks.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_video_unique_video.py
api/services/sync/: video.py
yt_listener/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
